--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,6 +1,6 @@
 
 <%-include("./layout/user header.ejs") %> 
-    <!-- Hero Section Begin -->
+    <!-- banner Section Begin -->
     <section class="hero">
         <div class="hero__slider owl-carousel">
             <div class="hero__items set-bg" data-setbg="/user/img/hero/hero-1.jpg">
@@ -47,10 +47,9 @@
             </div>
         </div>
     </section>
-    <!-- Hero Section End -->
+    <!-- banner Section End -->
 
-    <!-- Banner Section Begin -->
-    <%=categories %> 
+    <!-- category Section Begin -->
     <section class="banner spad">
         <div class="container">
             <div class="row">
@@ -90,7 +89,7 @@
             </div>
         </div>
     </section>
-    <!-- Banner Section End -->
+    <!-- category Section End -->
 
     <!-- Product Section Begin -->
     <section class="product spad">
