--- a/views/admin/edit-banner.ejs
+++ b/views/admin/edit-banner.ejs
@@ -4,13 +4,13 @@
 
 <div class="container ">
     <div class="row ">
-<form action="/admin/addBanner" method="post" enctype="multipart/form-data">
+<form action="/admin/bannerEdit/<%=banner._id%>" method="post" enctype="multipart/form-data">
 <div class="col-sm-12 col-xl-6 mt-4">
     <div class="bg-secondary rounded h-100 p-4">
-        <h6 class="mb-4">Add Banner</h6>
+        <h6 class="mb-4">Edit Banner</h6>
         <div class="form-floating mb-3">
             <select class="form-select" id="floatingSelect"
-                aria-label="Floating label select example" name="cat">
+                aria-label="Floating label select example" name="cat" >
                 <option selected>Open this select menu</option>
                 <% categoryList.forEach(function(categoryList){ %>
                 <option ><%=categoryList.name  %> </option>
@@ -20,13 +20,14 @@
         </div>
         <div class="form-floating mb-3">
             <input type="text" class="form-control"  
-                placeholder="Enter Product Name" name="names">
-            <label for="floatingInput">Product Name</label>
+                placeholder="Enter Product Name" name="names" value="<%=banner.mainTitle%>">
+            <label for="floatingInput">Banner Name</label>
         </div>
-        
+        <img src="/image/productImages/<%=banner.image[0]%>" id="imgView" class="mb-3" width="100px" height="100px" alt="">
+
         <div class="mb-3">
             <label for="formFile" class="form-label">Upload your Image</label>
-            <input class="form-control bg-dark" type="file" id="image"  name="image" multiple>
+            <input class="form-control bg-dark" onchange="viewImage(event)" type="file" id="image" value="<%=banner.image%>"  name="image" multiple>
         </div>
         <div class="form-floating">
             <textarea class="form-control" placeholder="Leave a comment here"
@@ -40,4 +41,10 @@
 </div>
 </div>
 
+<script>
+    function viewImage(e){
+        document.getElementById('imgView').src=URL.createObjectURL(e.target.files[0])
+    }
+
+</script>
 <%-include('./layout/admin footer.ejs') %> 
