banner displayed in user side

--- a/views/admin/add-banner.ejs
+++ b/views/admin/add-banner.ejs
@@ -23,6 +23,11 @@
                 placeholder="Enter Product Name" name="names">
             <label for="floatingInput">Product Name</label>
         </div>
+        <div class="form-floating mb-3">
+            <input type="text" class="form-control"  
+                placeholder="Enter Product Name" name="url">
+            <label for="floatingInput">Add URL</label>
+        </div>
         
         <div class="mb-3">
             <label for="formFile" class="form-label">Upload your Image</label>
