--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,9 +1,32 @@
 
 <%-include("./layout/user header.ejs") %> 
     <!-- banner Section Begin -->
+    
     <section class="hero">
+        <% bannerzz.forEach(function(bannerzz,index){ %> 
         <div class="hero__slider owl-carousel">
-            <div class="hero__items set-bg" data-setbg="/user/img/hero/hero-1.jpg">
+            <div class="hero__items set-bg" data-setbg="/image/productImages/<%=bannerzz.image%>">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-5 col-lg-7 col-md-8">
+                            <div class="hero__text">
+                                <h6><%=bannerzz.title%> Collection</h6>
+                                <h2><%=bannerzz.mainTitle%></h2>
+                                <p><%=bannerzz.description%> </p>
+                                <a href="<%=bannerzz.url%>" class="primary-btn">Shop now <span class="arrow_right"></span></a>
+                                <div class="hero__social">
+                                    <a href="#"><i class="fa fa-facebook"></i></a>
+                                    <a href="#"><i class="fa fa-twitter"></i></a>
+                                    <a href="#"><i class="fa fa-pinterest"></i></a>
+                                    <a href="#"><i class="fa fa-instagram"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <% }) %> 
+            <!-- <div class="hero__items set-bg" data-setbg="/user/img/hero/hero-2.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-5 col-lg-7 col-md-8">
@@ -23,28 +46,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="hero__items set-bg" data-setbg="/user/img/hero/hero-2.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-5 col-lg-7 col-md-8">
-                            <div class="hero__text">
-                                <h6>Summer Collection</h6>
-                                <h2>Fall - Winter Collections 2030</h2>
-                                <p>A specialist label creating luxury essentials. Ethically crafted with an unwavering
-                                commitment to exceptional quality.</p>
-                                <a href="#" class="primary-btn">Shop now <span class="arrow_right"></span></a>
-                                <div class="hero__social">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-pinterest"></i></a>
-                                    <a href="#"><i class="fa fa-instagram"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- banner Section End -->
