--- a/views/user/layout/user footer.ejs
+++ b/views/user/layout/user footer.ejs
@@ -74,7 +74,7 @@
             </form>
         </div>
     </div>
-    Search End
+    <!-- Search End -->
    
     <!-- Js Plugins -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
