--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -22,13 +22,86 @@
 <section class="checkout spad">
     <div class="container">
         <div class="checkout__form">
-            <form action="#" id="checkOut">
+            
                 <div class="row">
                     <div class="col-lg-8 col-md-6">
                         <h6 class="coupon__code"><span class="icon_tag_alt"></span> Have a coupon? <a href="#">Click
                         here</a> to enter your code</h6>
                         <h6 class="checkout__title">Select delivery Address</h6>
-                        <input type="text" name="userId" id="" value="<%=users._id %>" hidden>
+                        <p>
+                            <!-- <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                              Link with href
+                            </a> -->
+                            <button class="btn btn-primary" type="button" data-toggle="collapse" style="font-size: .6em; background-color: rgb(229, 54, 55); border: none;" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                              ADD new ADDRESS
+                            </button>
+                          </p>
+                          <div class="collapse" id="collapseExample">
+                            <form action="/addressCheck" method="post">
+                            <div class="row">
+                    <div class="col-lg-6">
+                        <div class="checkout__input">
+                            <p>Full Name<span>*</span></p>
+                            <input type="text" name="name" required>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="checkout__input">
+                            <p>mobile No<span>*</span></p>
+                            <input type="tel"  name="mobile" required>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="checkout__input">
+                            <p>Pincode<span>*</span></p>
+                            <input type="text" name="pin" required>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="checkout__input">
+                            <p>locality<span>*</span></p>
+                            <input type="text"  name="locality" required>
+                        </div>
+                    </div>
+                </div>
+                <div class="checkout__input">
+                    <p>Address<span>*</span></p>
+                    <input type="text" placeholder="address" name="addressDetails" required>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="checkout__input">
+                            <p>City<span>*</span></p>
+                            <input type="text" name="district" required>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="checkout__input">
+                            <p>State<span>*</span></p>
+                            <input type="text" name="state" required>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="checkout__input">
+                            <p>Landmark<span style="color: yellowgreen;">(optional)</span></p>
+                            <input type="text"  name="landmark" >
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="checkout__input">
+                            <p>Alternative Phone<span style="color: yellowgreen;">(optional)</span></p>
+                            <input type="tel" name="optmob">
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+                          </div>
+                          <form action="#" id="checkOut">
                         <% if (adds!==null) { %>
                             <% add.forEach(function(adds,index)  {%> 
                             <section class="row justify-content-center " style="margin-top: 2em;">
@@ -38,7 +111,7 @@
                                             <div class="d-flex justify-content-between">
                                                 <h5 class="card-title">Address <%=index+1 %>  </h5>
                                                 
-                                                    <input class="checkout__input__checkbox" type="radio" id="html" name="address" required value="<%=adds.name %>  <%=adds.addressDetails%> <%=adds.locality%> <%=adds.district %> <%=adds.pin%> <%=adds.mobile%> ">
+                                                    <input class="checkout__input__checkbox" type="radio" id="html" name="address"  value="<%=adds.name %>  <%=adds.addressDetails%> <%=adds.locality%> <%=adds.district %> <%=adds.pin%> <%=adds.mobile%> ">
                                                    
                                                 
                                             </div>
@@ -60,82 +133,11 @@
                                     
                                 </div>
                                 <% } %>   
-                       
-                        <!--<div class="row">
-                            <div class="col-lg-6">
-                                <div class="checkout__input">
-                                    <p>Fist Name<span>*</span></p>
-                                    <input type="text">
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="checkout__input">
-                                    <p>Last Name<span>*</span></p>
-                                    <input type="text">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="checkout__input">
-                            <p>Country<span>*</span></p>
-                            <input type="text">
-                        </div>
-                        <div class="checkout__input">
-                            <p>Address<span>*</span></p>
-                            <input type="text" placeholder="Street Address" class="checkout__input__add">
-                            <input type="text" placeholder="Apartment, suite, unite ect (optinal)">
-                        </div>
-                        <div class="checkout__input">
-                            <p>Town/City<span>*</span></p>
-                            <input type="text">
-                        </div>
-                        <div class="checkout__input">
-                            <p>Country/State<span>*</span></p>
-                            <input type="text">
-                        </div>
-                        <div class="checkout__input">
-                            <p>Postcode / ZIP<span>*</span></p>
-                            <input type="text">
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="checkout__input">
-                                    <p>Phone<span>*</span></p>
-                                    <input type="text">
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="checkout__input">
-                                    <p>Email<span>*</span></p>
-                                    <input type="text">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="checkout__input__checkbox">
-                            <label for="acc">
-                                Create an account?
-                                <input type="checkbox" id="acc">
-                                <span class="checkmark"></span>
-                            </label>
-                            <p>Create an account by entering the information below. If you are a returning customer
-                            please login at the top of the page</p>
-                        </div>
-                        <div class="checkout__input">
-                            <p>Account Password<span>*</span></p>
-                            <input type="text">
-                        </div>
-                        <div class="checkout__input__checkbox">
-                            <label for="diff-acc">
-                                Note about your order, e.g, special noe for delivery
-                                <input type="checkbox" id="diff-acc">
-                                <span class="checkmark"></span>
-                            </label>
-                        </div>
-                        <div class="checkout__input">
-                            <p>Order notes<span>*</span></p>
-                            <input type="text"
-                            placeholder="Notes about your order, e.g. special notes for delivery.">
-                        </div> -->
+                               
+                                 
+                                
                     </div>
+                   
                     <div class="col-lg-4 col-md-6">
                         <div class="checkout__order">
                             <h4 class="order__title">Your order</h4>
@@ -154,7 +156,9 @@
                                 <% }) %> 
                                 <li >Total <span  ><%=total%></span></li>
                                 <input type="text" name="totalPrice" value="<%=total%>" hidden>
-                              
+                                <input type="text" name="userId" id="" value="<%=users._id %>" hidden>
+                                <input class="checkout__input__checkbox" type="radio" id="html" name="address"  value="<%=adds.name %>  <%=adds.addressDetails%> <%=adds.locality%> <%=adds.district %> <%=adds.pin%> <%=adds.mobile%> " hidden>
+
                             </ul>
                            
                             <p>Dear Customer, Kindly select your payment method given below:</p>
@@ -175,8 +179,9 @@
                             <button type="submit" class="site-btn">PLACE ORDER</button>
                         </div>
                     </div>
+                </form>
                 </div>
-            </form>
+            
         </div>
     </div>
 </section>
