sales report feature added in admin side and minor changes

--- a/views/admin/edit-banner.ejs
+++ b/views/admin/edit-banner.ejs
@@ -31,7 +31,7 @@
         </div>
         <div class="form-floating mb-3">
             <input type="text" class="form-control"  
-                placeholder="Enter Product Name" name="url" value="<%=banner.mainTitle%>">
+                placeholder="Enter Product Name" name="url" value="<%=banner.url%>">
             <label for="floatingInput">Enter URL</label>
         </div>
         <div class="form-floating">
