--- a/views/user/address.ejs
+++ b/views/user/address.ejs
@@ -114,12 +114,12 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="list-group list-group-flush costum-border">
-                            <li class="list-group-item"><a class="text-decoration-none text-dark" href=""><b> Account details</b></a>
+                            <li class="list-group-item"><a class="text-decoration-none text-dark" href="/profile"><b> Account details</b></a>
                             </li>
-                            <li class="list-group-item"><a class="text-decoration-none text-dark" href="address.html">Address</a></li>
-                            <li class="list-group-item"><a class="text-decoration-none text-dark" href="">Oders</a></li>
-                            <li class="list-group-item"><a class="text-decoration-none text-dark" href="">Whishlist</a></li>
-                            <li class="list-group-item "><a class="text-decoration-none text-danger" href="">Logout</a></li>
+                            <li class="list-group-item"><a class="text-decoration-none text-dark" href="/address">Address</a></li>
+                            <li class="list-group-item"><a class="text-decoration-none text-dark" href="/orders">Oders</a></li>
+                            <li class="list-group-item"><a class="text-decoration-none text-dark" href="/wishlist">Whishlist</a></li>
+                            <li class="list-group-item "><a class="text-decoration-none text-danger" href="/logout">Logout</a></li>
                         </ul>
                     </div>
                 </div>
@@ -130,9 +130,9 @@
                 <div class="col-lg-6 col-md-6">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li class="active"><a href="./index.html">Home</a></li>
-                            <li><a href="./shop.html">Shop</a></li>
-                            <li><a href="#">Pages</a>
+                            <li class="active"><a href="/">Home</a></li>
+                            <li><a href="/shop">Shop</a></li>
+                            <!-- <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./about.html">About Us</a></li>
                                     <li><a href="./shop-details.html">Shop Details</a></li>
@@ -140,7 +140,7 @@
                                     <li><a href="./checkout.html">Check Out</a></li>
                                     <li><a href="./blog-details.html">Blog Details</a></li>
                                 </ul>
-                            </li>
+                            </li> -->
                             <li><a href="./blog.html">Blog</a></li>
                             <li><a href="./contact.html">Contacts</a></li>
                         </ul>
