--- a/views/admin/layout/admin header.ejs
+++ b/views/admin/layout/admin header.ejs
@@ -62,6 +62,14 @@
                     <a href="coupons" class="nav-item nav-link"><i class="bi bi-card-checklist"></i>Coupon</a>
                     <a href="order" class="nav-item nav-link"><i class="bi bi-bag"></i>Order</a>
                     <a href="banner" class="nav-item nav-link"><i class="bi bi-back"></i></i>Banner</a>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Sales Report</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+                            <a href="dayReport" class="dropdown-item">Day Report</a>
+                            <a href="monthReport" class="dropdown-item">Month Report</a>
+                            <a href="yearReport" class="dropdown-item">Year Report</a>
+                        </div>
+                    </div>
                 </div>
             </nav>
         </div>
