--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -25,9 +25,14 @@
             
                 <div class="row">
                     <div class="col-lg-8 col-md-6">
-                        <h6 class="coupon__code"><span class="icon_tag_alt"></span> Have a coupon? <a href="#">Click
+                        <!-- <h6 class="coupon__code"><span class="icon_tag_alt"></span> Have a coupon? <a href="#">Click
                         here</a> to enter your code</h6>
-                        <h6 class="checkout__title">Select delivery Address</h6>
+                        <h6 class="checkout__title">Select delivery Address</h6> -->
+                        <% if(error) {%> 
+                        <div class="alert alert-danger" role="alert">
+                            <%=error %> 
+                          </div>
+                          <% } %> 
                         <p>
                             <!-- <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                               Link with href
@@ -196,10 +201,10 @@
             encode:true,
             type:JSON,
             success:(response)=>{
-                alert(response)
+                // alert(response)
                 if(response.codSuccess){
                     console.log('suuuuuuuuuuuuu');
-                  alert('success')  
+                //   alert('success')  
                 location.href='/orderSuccess'
                 }else{
                     razorpayPayment(response)
@@ -219,9 +224,9 @@
     "order_id": order.id, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
     "callback_url": "https://eneqd3r9zrjok.x.pipedream.net/",
     "handler": function (response){
-    alert(response.razorpay_payment_id);
-    alert(response.razorpay_order_id);
-    alert(response.razorpay_signature)
+    // alert(response.razorpay_payment_id);
+    // alert(response.razorpay_order_id);
+    // alert(response.razorpay_signature)
 
         verifyPayment(response,order)
     },
