--- a/views/user/layout/user header.ejs
+++ b/views/user/layout/user header.ejs
@@ -130,10 +130,11 @@
                             <li><a href="./blog.html">Blog</a></li>
                             <li><a href="./contact.html">Contacts</a></li>
                             <%if(users) {%> 
-                            <li><a href="#"><%=users.fristName %> <i class="bi bi-chevron-down" style="font-size: 1.5rem;"></i></a>
+                            <li><a href="#"><%=users.fristName.toUpperCase()%> <i class="bi bi-chevron-down" style="font-size: 1.5rem;"></i></a>
                                 <ul class="dropdown">
                                     <li><a href="/profile">Account</a></li>
                                     <li><a href="/wishlist">Wishlist</a></li>
+                                    <li><a href="/orders">Orders</a></li>
                                     <li><a href="/logout">LogOut</a></li>
                                     <!-- <li><a href="./checkout.html">Check Out</a></li>
                                     <li><a href="./blog-details.html">Blog Details</a></li> -->
