--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -116,7 +116,7 @@
                             <li class="list-group-item"><a class="text-decoration-none text-dark" href="/profile"><b> Account details</b></a>
                             </li>
                             <li class="list-group-item"><a class="text-decoration-none text-dark" href="/address">Address</a></li>
-                            <li class="list-group-item"><a class="text-decoration-none text-dark" href="">Oders</a></li>
+                            <li class="list-group-item"><a class="text-decoration-none text-dark" href="/orders">Oders</a></li>
                             <li class="list-group-item"><a class="text-decoration-none text-dark" href="/wishlist">Wishlist</a></li>
                             <li class="list-group-item "><a class="text-decoration-none text-danger" href="/logout">Logout</a></li>
                         </ul>
@@ -129,9 +129,9 @@
                 <div class="col-lg-6 col-md-6">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li class="active"><a href="./index.html">Home</a></li>
-                            <li><a href="./shop.html">Shop</a></li>
-                            <li><a href="#">Pages</a>
+                            <li class="active"><a href="/">Home</a></li>
+                            <li><a href="/shop">Shop</a></li>
+                            <!-- <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./about.html">About Us</a></li>
                                     <li><a href="./shop-details.html">Shop Details</a></li>
@@ -139,7 +139,7 @@
                                     <li><a href="./checkout.html">Check Out</a></li>
                                     <li><a href="./blog-details.html">Blog Details</a></li>
                                 </ul>
-                            </li>
+                            </li> -->
                             <li><a href="./blog.html">Blog</a></li>
                             <li><a href="./contact.html">Contacts</a></li>
                         </ul>
@@ -200,7 +200,7 @@
             </div>
         </section>
         <section class="row justify-content-center pb-4" style="margin-top: 7em;">
-            <div class="col-10 col-md-4">
+            <!-- <div class="col-10 col-md-4">
                 <form id="passwordChange">
                     <h5 class="mb-5 text-center">change password</h5>
                     <div class="form-group">
@@ -221,7 +221,7 @@
                     <button type="submit" class="d-none"></button>
                 </form>
                 <button type="submit" class="btn btn-warning mt-3" onclick="changePassword()">Save</button>
-            </div>
+            </div> -->
         </section>
     </main>
 
