--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -43,9 +43,9 @@
                                             <td><%=productList.discount%> </td>
                                             <td><%=productList.size%> </td>
                                             <td >
-                                                <%for(let z=0;z<productList.image.length;z++) {%>
-                                                    <img height="110px" src="/image/productImages/<%= productList.image[z] %>" >
-                                                    <% } %> 
+                                                
+                                                    <img height="110px" src="/image/productImages/<%= productList.image[0] %>" >
+                                                    
                                                 </td>
                                             <td><%=productList.description%> </td>
                                             <td>
