--- a/views/user/new-password.ejs
+++ b/views/user/new-password.ejs
@@ -26,34 +26,29 @@
               <div class="col-md-6 col-lg-7 d-flex align-items-center">
                 <div class="card-body p-4 p-lg-5 text-black">
   
-                  <form action="/login" method="post">
+                  <form action="/reset" method="post">
   
                     <div class="d-flex align-items-center mb-3 pb-1">
                       <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
                       <span style="color: black;" class="h1 fw-bold mb-0">Logo</span>
                     </div>
   
-                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
-  
+                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Do you forgot your password?!! <span >Don't worry &#128151 </span> </h5>
                     <div class="form-outline mb-4">
-                        <label class="form-label " for="form2Example17" >Enter Your Email </label>
-                      <input type="tel" id="form2Example17" name="email" class="form-control form-control-lg" />
-                     
-                    </div>
-  
-                    <div class="form-outline mb-4">
-                        <label class="form-label" for="form2Example27">Password</label>
+                        <label class="form-label" for="form2Example27">New Password</label>
                       <input type="password" id="form2Example27" name="pass" class="form-control form-control-lg" />
                      
                     </div>
-  
+                    <div class="form-outline mb-4">
+                        <label class="form-label" for="form2Example27">confirm Password</label>
+                      <input type="password" id="form2Example27" name="cpass" class="form-control form-control-lg" />
+                     <input type="hidden" hidden name="userid" value="<%=userid %>">
+                     <input type="hidden" hidden name="passwordToken" value="<%=passwordToken%>">
+                    </div>
                     <div class="pt-1 mb-4">
-                      <button type="submit" class="btn btn-dark btn-lg btn-block" type="button">Login</button>
+                      <button type="submit" class="btn btn-dark btn-lg btn-block" type="button">Submit</button>
                     </div>
   
-                    <a class="small text-muted" href="/forgetPassword">Forgot password?</a>
-                    <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="/signUp"
-                        style="color: #393f81;">Register here</a></p>
                   </form>
   
                 </div>
