invoice included in user side

--- a/views/user/ordersView.ejs
+++ b/views/user/ordersView.ejs
@@ -58,6 +58,9 @@
                                     <%=ord.status %> 
                                 </td>
                                 <td>
+                                    <a href="/invoice/?id=<%=ord._id%>" class="btn btn-light text-capitalize" style="font-size: 20px;"> <i class="bi bi-printer"></i></a>
+                                </td>
+                                <td>
                                    
        
                                     <!-- Button trigger modal -->
