cancel button included user side

--- a/views/admin/order.ejs
+++ b/views/admin/order.ejs
@@ -44,7 +44,7 @@
                                             <option value="Cancelled">Cancelled</option>
                                             <option value="Delivered">delivered</option>
                                             <option value="Shipped">Shipped</option>
-                                            <option value="Pedning">pending</option>
+                                            <option value="Pending">pending</option>
                                             <option value="Placed">Placed</option>
                                         </select>
                                         </td>
