--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -41,7 +41,7 @@
                                             <div class="shop__sidebar__categories">
                                                 <ul class="nice-scroll">
                                                     <% for(var i = 0 ;i<categories.length;i++){ %>
-                                                        <li><a href="/productShow/<%=categories[i]._id%>"><%=categories[i].name%> </a></li>
+                                                        <li><a href="/productShow/<%=categories[1]._id%>"><%=categories[i].name%> </a></li>
                                                   <%  } %> 
                                                    
                                                     <!-- <li><a href="#">Women (20)</a></li>
