dashboard done in admin side

--- a/views/admin/banner.ejs
+++ b/views/admin/banner.ejs
@@ -67,7 +67,7 @@
             <!-- Table End -->
             <script>
                 $(document).ready( function () {
-                    var table = $('#bannerTable').DataTable();
+                    $('#bannerTable').DataTable();
                 } );
             </script>
         <!-- Content End -->
