sending messages from beckend to frontend

--- a/views/user/forget-password.ejs
+++ b/views/user/forget-password.ejs
@@ -34,7 +34,16 @@
                     </div>
   
                     <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Do you forgot your password?!! <span >Don't worry &#128151 </span> </h5>
-  
+                    <%if(error) {%>
+                      <% if(error.length){%> 
+                      <div class="alert alert-danger d-flex align-items-center" role="alert">
+                        <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+                        <div>
+                          <%=error %> 
+                        </div>
+                      </div>
+                      <% }%>
+                        <% } %>   
                     <div class="form-outline mb-4">
                         <label class="form-label " for="form2Example17" >Enter Your Email </label>
                       <input type="tel" id="form2Example17" name="email" class="form-control form-control-lg" />
