--- a/views/admin/add-category.ejs
+++ b/views/admin/add-category.ejs
@@ -5,6 +5,13 @@
     <div class="container">
     <div class="row justify-content-center">
 <div class="col-sm-12 col-xl-6">
+    <% if(errors){%>
+        <h5  style="color: red;">
+          <%= errors %> 
+      </h5>
+      <%}else{%>
+          
+     <% } %> 
     <div class="bg-secondary rounded h-100 p-4">
         <h6 class="mb-4">Add Category</h6>
         <div class="form-floating mb-3">
