--- a/views/user/ordersView.ejs
+++ b/views/user/ordersView.ejs
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="shopping__cart__table">
-                    <table class="table">
+                    <table class="table"  >
                         <thead>
                        
                             <tr>
@@ -106,7 +106,7 @@
 
                     </h5>
                     <p>
-                        <%=val.productId.price %>
+                        <%=val.productPrice%>
                     </p>
                     <h6>
                         <%=val.productId.description%>
